Criando array de projetos para deixar dinamico

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
             </div>
 
             <h3 class="services__title text-lg">
-              WEB DEVELOPMENT
+              CRIAÇÃO DE SITES EM WORDPRESS
             </h3>
             <p class="services__details">
-              am an expert web designer and developer. Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+              Sites de qualidade, atualização fácil, e que caiba no seu orçamento.
             </p>
           </div>
 
@@ -192,10 +192,10 @@
             </div>
 
             <h3 class="services__title text-lg">
-              RESPONSIVE DESIGN
+              LAYOUT RESPONSIVO
             </h3>
             <p class="services__details">
-              am an expert web designer and developer. Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+              Seu site apresentável em qualquer dispositivo de forma clara e organizada.
             </p>
           </div>
 
@@ -212,10 +212,10 @@
             </div>
 
             <h3 class="services__title text-lg">
-              SEO
+              OTIMIZAÇÃO DE SEO
             </h3>
             <p class="services__details">
-              am an expert web designer and developer. Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+              Otimizações para tornar o seu site melhor posicionado nos buscadores de pesquisa.
             </p>
           </div>
 
@@ -455,128 +455,28 @@
           >
             TODOS
           </button>
+          <button
+            class="category__btn text-xs"
+            data-filter=".api"
+          >
+            API
+          </button>
           <button 
             class="category__btn text-xs"
-            data-filter=".web"
+            data-filter=".institucional"
           >
-            INSTITUCIONAIS
+            INSTITUCIONAL
           </button>
           <button 
             class="category__btn text-xs"
             data-filter=".landing"
           >
-            LANDING PAGES
+            LANDING PAGE
           </button>
-          <button
-            class="category__btn text-xs"
-            data-filter=".api"
-          >
-            APIs
-          </button>
+          
         </div>
 
-        <div class="projects__container grid">
-
-          <div class="project__item grid mix api">
-            <img
-              src="./assets/img/project-1.png"
-              alt=""
-              class="project__img"  
-            />
-
-            <div class="project__data">
-              <h3 class="project__title text-lg">
-                MOBILE AND DESKTOP APP FOR LONDON HOSTEL STORE
-              </h3>
-              <p class="project__description">
-                Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye. Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
-              </p>
-              <h4 class="project__stack text-xs">
-                USED STACK:
-              </h4>
-              <ul class="tags text-sm">
-                <li>html5</li>
-                <li>css3</li>
-                <li>JavaScript</li>
-                <li>BEM</li>
-                <li>bower</li>
-                <li>grunt</li>
-              </ul>
-
-              <div class="project__link">
-                <a href="" class="project__link--item text-sm">Demo</a>
-                <a href="" class="project__link--item text-sm">Repositório</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="project__item grid mix web">
-            <img
-              src="./assets/img/project-2.png"
-              alt=""
-              class="project__img"  
-            />
-
-            <div class="project__data">
-              <h3 class="project__title text-lg">
-                WEB APP PAGE FOR TRAVEL COMPANY
-              </h3>
-              <p class="project__description">
-                Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye. Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
-              </p>
-              <h4 class="project__stack text-xs">
-                USED STACK:
-              </h4>
-              <ul class="tags text-sm">
-                <li>html5</li>
-                <li>css3</li>
-                <li>JavaScript</li>
-                <li>BEM</li>
-                <li>bower</li>
-                <li>grunt</li>
-              </ul>
-
-              <div class="project__link">
-                <a href="" class="project__link--item text-sm">Demo</a>
-                <a href="" class="project__link--item text-sm">Repositório</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="project__item grid mix landing">
-            <img
-              src="./assets/img/project-3.png"
-              alt=""
-              class="project__img"  
-            />
-
-            <div class="project__data">
-              <h3 class="project__title text-lg">
-                ADMIN TEMPLATE FOR PHOTO SERVICE
-              </h3>
-              <p class="project__description">
-                Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye. Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
-              </p>
-              <h4 class="project__stack text-xs">
-                USED STACK:
-              </h4>
-              <ul class="tags text-sm">
-                <li>html5</li>
-                <li>css3</li>
-                <li>JavaScript</li>
-                <li>BEM</li>
-                <li>bower</li>
-                <li>grunt</li>
-              </ul>
-
-              <div class="project__link">
-                <a href="" class="project__link--item text-sm">Demo</a>
-                <a href="" class="project__link--item text-sm">Repositório</a>
-              </div>
-            </div>
-          </div>
-
-
+        <div id="projects" class="projects__container grid">
         </div>
       </section>
 
@@ -655,7 +555,7 @@
 
             <div class="contact__info">
               <dl class="contact__list">
-                <dt>Whasapp:</dt>
+                <dt>Whatsapp:</dt>
                 <dd>+55 (83) 9 9926-0495</dd>
                 <dt>E-mail:</dt>
                 <dd>dgleysilva@gmail.com</dd>
@@ -781,8 +681,12 @@
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
     ></script>
 
+    <!--=============== Projects Js ===============-->
+    <script src="assets/js/projects.js"></script>
+
     <!--=============== Js ===============-->
     <script src="assets/js/main.js"></script>
+
 
     <!--=============== Common ===============-->
     <script src="assets/js/common.js"></script>
