--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           Sou desenvolvedor Web Júnior capaz de construir uma presença na Web desde o início - desde o conceito, navegação, layout e programação até SEO. Hábil em escrever código bem projetado, testável e eficiente usando as melhores práticas atuais no desenvolvimento da Web. Aprendo rápido, trabalho duro e trabalho em equipe, proficiente em uma variedade de linguagens de script e ferramentas da Web multimídia.
         </p>
         <a
-          href="./assets/img/John-Cv.pdf"
+          href="./assets/img/curriculo.pdf"
           class="button button--flex text-sm"
         >
           <i class="ri-download-line"></i>
