--- a/index.html
+++ b/index.html
@@ -463,6 +463,18 @@
           </button>
           <button 
             class="category__btn text-xs"
+            data-filter=".desafio"
+          >
+            DESAFIOS
+          </button>
+          <button 
+            class="category__btn text-xs"
+            data-filter=".jogo"
+          >
+            JOGOS
+          </button>
+          <button 
+            class="category__btn text-xs"
             data-filter=".institucional"
           >
             INSTITUCIONAL
