Fazendo algumas alterações

--- a/index.html
+++ b/index.html
@@ -63,26 +63,20 @@
             </li>
 
             <li>
-              <a href="#services" class="nav__link">
-                Serviços
-              </a>
-            </li>
-
-            <li>
               <a href="#resume" class="nav__link">
-                Resumo
+                Summary
               </a>
             </li>
 
             <li>
               <a href="#portfolio" class="nav__link">
-                Portfólio
+                Projects
               </a>
             </li>
 
             <li>
               <a href="#contact" class="nav__link">
-                Contato
+                Contact
               </a>
             </li>
           </ul>
@@ -109,13 +103,13 @@
               Dgley Ramos_
             </h1>
             <p class="home__work">
-              desenvolvedor web
+            Analista Operações Digitais I
             </p>
             <dl class="home__list">
               <dt>AGE:</dt>
-              <dd>28</dd>
+              <dd>29</dd>
               <dt>PHONE:</dt>
-              <dd>+55 (83) 9 9926-0495</dd>
+              <dd>+55(83)99926-0495</dd>
               <dt>EMAIL:</dt>
               <dd>dgleysilva@gmail.com</dd>
               <dt>ADDRESS:</dt>
@@ -142,7 +136,7 @@
           Hi_
         </h2>
         <p class="hello__details text-lg">
-          Sou desenvolvedor Web Júnior capaz de construir uma presença na Web desde o início - desde o conceito, navegação, layout e programação até SEO. Hábil em escrever código bem projetado, testável e eficiente usando as melhores práticas atuais no desenvolvimento da Web. Aprendo rápido, trabalho duro e trabalho em equipe, proficiente em uma variedade de linguagens de script e ferramentas da Web multimídia.
+          I'm a Junior Web Developer capable of building a web presence from the ground up - from concept, navigation, layout and programming to SEO. Skilled in writing well-designed, testable, and efficient code using current best practices in web development. A fast learner, hard worker and team player, proficient in a variety of scripting languages and multimedia web tools.
         </p>
         <a
           href="./assets/img/curriculo.pdf"
@@ -154,7 +148,7 @@
       </section>
 
       <!--=============== Services ===============-->
-      <section class="services section container" id="services">
+      <!-- <section class="services section container" id="services">
         <h2 class="section__title">Serviços_</h2>
         <div class="services__container grid">
 
@@ -220,15 +214,15 @@
           </div>
 
         </div>
-      </section>
+      </section> -->
 
       <!--=============== Resume ===============-->
       <section class="section container" id="resume">
-        <h2 class="section__title">Resumo_</h2>
+        <h2 class="section__title">Summary_</h2>
 
         <div class="resume__container grid">
           <div class="resume__data">
-            <h3 class="resume__title text-sm">EDUCAÇÃO</h3>
+            <h3 class="resume__title text-sm">EDUCATION</h3>
 
             <div class="resume__item">
               <h3 class="resume__subtitle text-sm">
@@ -257,32 +251,19 @@
           </div>
 
           <div class="resume__data">
-            <h3 class="resume__title text-sm">EXPERIÊNCIA</h3>
+            <h3 class="resume__title text-sm">EXPERIENCE</h3>
 
             <div class="resume__item">
               <h3 class="resume__subtitle text-sm">
-                Aprendiz de Luthier
+                Analista Operações Digitais I
               </h3>
               <p class="resume__date text-sm">
-                2015 - 2016
+                2023
               </p>
               <p class="resume__description text-lg">
-                Instituto Cultural Casa do Béradêro
+                Capgemini
               </p>
             </div>
-
-            <div class="resume__item">
-              <h3 class="resume__subtitle text-sm">
-                Cinegrafista
-              </h3>
-              <p class="resume__date text-sm">
-                2011 - 2014
-              </p>
-              <p class="resume__description text-lg">
-                ESPROART
-              </p>
-            </div>
-
           </div>
         </div>
       </section>
@@ -305,7 +286,7 @@
                 </div>
 
                 <div class="skills__bar">
-                  <span class="skills__percentage" style="width: 75%"/>
+                  <span class="skills__percentage" style="width: 75%">
 
                   </span>
                 </div>
@@ -327,6 +308,19 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <p class="skills__name test-sm">BOOTSTRAP</p>
+                  <span class="skills__number text-sm">60%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 60%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">JAVASCRIPT</p>
                   <span class="skills__number text-sm">50%</span>
                 </div>
 
@@ -339,25 +333,12 @@
 
               <div class="skills__data">
                 <div class="skills__titles">
-                  <p class="skills__name test-sm">JAVASCRIPT</p>
-                  <span class="skills__number text-sm">40%</span>
-                </div>
-
-                <div class="skills__bar">
-                  <span class="skills__percentage" style="width: 40%">
-
-                  </span>
-                </div>
-              </div>
-
-              <div class="skills__data">
-                <div class="skills__titles">
                   <p class="skills__name test-sm">REATC.JS</p>
-                  <span class="skills__number text-sm">20%</span>
+                  <span class="skills__number text-sm">30%</span>
                 </div>
 
                 <div class="skills__bar">
-                  <span class="skills__percentage" style="width: 20%">
+                  <span class="skills__percentage" style="width: 30%">
 
                   </span>
                 </div>
@@ -374,6 +355,19 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <p class="skills__name test-sm">JAVA</p>
+                  <span class="skills__number text-sm">35%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 35%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">SPRING BOOT</p>
                   <span class="skills__number text-sm">25%</span>
                 </div>
 
@@ -386,7 +380,41 @@
 
               <div class="skills__data">
                 <div class="skills__titles">
-                  <p class="skills__name test-sm">SPRING BOOT</p>
+                  <p class="skills__name test-sm">POSTGRESQL</p>
+                  <span class="skills__number text-sm">20%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 20%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">NODE.JS</p>
+                  <span class="skills__number text-sm">20%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 20%">
+
+                  </span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="skills__content">
+            <h3 class="skills__title text-sm">TOOLS</h3>
+
+            <div class="skills__list grid">
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">FIGMA</p>
                   <span class="skills__number text-sm">15%</span>
                 </div>
 
@@ -399,12 +427,12 @@
 
               <div class="skills__data">
                 <div class="skills__titles">
-                  <p class="skills__name test-sm">POSTGRESQL</p>
-                  <span class="skills__number text-sm">10%</span>
+                  <p class="skills__name test-sm">SERVICENOW</p>
+                  <span class="skills__number text-sm">16%</span>
                 </div>
 
                 <div class="skills__bar">
-                  <span class="skills__percentage" style="width: 10%">
+                  <span class="skills__percentage" style="width: 16%">
 
                   </span>
                 </div>
@@ -425,12 +453,12 @@
 
               <div class="skills__data">
                 <div class="skills__titles">
-                  <p class="skills__name test-sm">NODE.JS</p>
-                  <span class="skills__number text-sm">10%</span>
+                  <p class="skills__name test-sm">VS CODE</p>
+                  <span class="skills__number text-sm">75%</span>
                 </div>
 
                 <div class="skills__bar">
-                  <span class="skills__percentage" style="width: 10%">
+                  <span class="skills__percentage" style="width: 75%">
 
                   </span>
                 </div>
@@ -445,7 +473,7 @@
       <!--=============== Projects ===============-->
       <section class="work section container" id="portfolio">
         <h2 class="section__title">
-          Projetos_
+          Projects_
         </h2>
 
         <div class="project__categories">
@@ -453,37 +481,19 @@
             class="category__btn text-xs active-work"
             data-filter="all"
           >
-            TODOS
+            ALL
           </button>
           <button
             class="category__btn text-xs"
-            data-filter=".api"
+            data-filter=".desktop"
           >
-            API
+            DESKTOP
           </button>
           <button 
             class="category__btn text-xs"
-            data-filter=".desafio"
+            data-filter=".mobile"
           >
-            DESAFIOS
-          </button>
-          <button 
-            class="category__btn text-xs"
-            data-filter=".jogo"
-          >
-            JOGOS
-          </button>
-          <button 
-            class="category__btn text-xs"
-            data-filter=".institucional"
-          >
-            INSTITUCIONAL
-          </button>
-          <button 
-            class="category__btn text-xs"
-            data-filter=".landing"
-          >
-            LANDING PAGE
+            MOBILE
           </button>
           
         </div>
@@ -492,75 +502,12 @@
         </div>
       </section>
 
-      <!--=============== Testimonials ===============-->
-      <!--
-      <section class="testimonials section">
-        <div class="testimonial__bg">
-          <div class="testimonial__icon">
-            <i class="ri-double-quotes-r"></i>
-          </div>
-
-          <div class="swiper testimonial__container container">
-            <div class="swiper-wrapper">
-
-              <div class="swiper-slide testimonial__item">
-                <h3 class="author__name text-lg">
-                  Antonio Anderson
-                </h3>
-                <p class="author__project">
-                  Project: Landin page for travel company
-                </p>
-                <div class="ruler"></div>
-                <p class="testimonial__description text-lg">
-                  Up or well must less rent read walk so be. Easy sold at do hour sing spot. Any meant has cease too the decay. Since party burst am it match. By or blushes between besides offices noisier as. Sending do brought winding compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has cease too the decay.
-                </p>
-              </div>
-
-              <div class="swiper-slide testimonial__item">
-                <h3 class="author__name text-lg">
-                  Antonio Anderson
-                </h3>
-                <p class="author__project">
-                  Project: Landin page for travel company
-                </p>
-                <div class="ruler"></div>
-                <p class="testimonial__description text-lg">
-                  Up or well must less rent read walk so be. Easy sold at do hour sing spot. Any meant has cease too the decay. Since party burst am it match. By or blushes between besides offices noisier as. Sending do brought winding compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has cease too the decay.
-                </p>
-              </div>
-
-              <div class="swiper-slide testimonial__item">
-                <h3 class="author__name text-lg">
-                  Antonio Anderson
-                </h3>
-                <p class="author__project">
-                  Project: Landin page for travel company
-                </p>
-                <div class="ruler"></div>
-                <p class="testimonial__description text-lg">
-                  Up or well must less rent read walk so be. Easy sold at do hour sing spot. Any meant has cease too the decay. Since party burst am it match. By or blushes between besides offices noisier as. Sending do brought winding compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has cease too the decay.
-                </p>
-              </div>
-
-            </div>
-            <div class="swiper-button-next">
-              <img src="./assets/img/arrow-next.svg"
-              alt="Icon arrow next">
-            </div>
-            <div class="swiper-button-prev">
-              <img src="./assets/img/arrow-prev.svg"
-              alt="Icon arrow prev">
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-        </div>
-      </section>
-      -->
+      
       <!--=============== Contact ===============-->
       <section class="contact section" id="contact">
         <div class="contact__content container">
           <h2 class="section__title">
-            Entrar em contato_
+            Get in touch_
           </h2>
 
           <div class="contact__container grid">
@@ -568,7 +515,7 @@
             <div class="contact__info">
               <dl class="contact__list">
                 <dt>Whatsapp:</dt>
-                <dd>+55 (83) 9 9926-0495</dd>
+                <dd>+55(83)99926-0495</dd>
                 <dt>E-mail:</dt>
                 <dd>dgleysilva@gmail.com</dd>
               </dl>
@@ -606,7 +553,7 @@
 
             <div class="contact__form">
               <p class="contact__form-title">
-                Ou apenas me escreva uma carta aqui_
+                Or just write me a letter here_
               </p>
 
               <form id="contact-form">
@@ -655,7 +602,7 @@
               </form>
 
               <p class="footer__copy">
-                &copy; 2022 Dgley Ramos. Todos os direitor reservados
+                &copy; 2022 Dgley Ramos. All rights reserved
               </p>
             </div>
           </div>
