Excluindo algumas imagens

--- a/index.html
+++ b/index.html
@@ -141,80 +141,13 @@
         <a
           href="./assets/img/curriculo.pdf"
           class="button button--flex text-sm"
+          target="_blank"
         >
           <i class="ri-download-line"></i>
           DOWNLOAD CV
         </a>
       </section>
 
-      <!--=============== Services ===============-->
-      <!-- <section class="services section container" id="services">
-        <h2 class="section__title">Serviços_</h2>
-        <div class="services__container grid">
-
-          <div class="services__item">
-            <div class="icon__box">
-              <img
-                src="./assets/img/laptop.png"
-                alt=""
-                class="services__icon"
-              />
-              <div class="services__dot">
-                <span class="dot"></span>
-              </div>
-            </div>
-
-            <h3 class="services__title text-lg">
-              CRIAÇÃO DE SITES EM WORDPRESS
-            </h3>
-            <p class="services__details">
-              Sites de qualidade, atualização fácil, e que caiba no seu orçamento.
-            </p>
-          </div>
-
-
-          <div class="services__item">
-            <div class="icon__box">
-              <img
-                src="./assets/img/smartphone-call.png"
-                alt=""
-                class="services__icon"
-              />
-              <div class="services__dot">
-                <span class="dot"></span>
-              </div>
-            </div>
-
-            <h3 class="services__title text-lg">
-              LAYOUT RESPONSIVO
-            </h3>
-            <p class="services__details">
-              Seu site apresentável em qualquer dispositivo de forma clara e organizada.
-            </p>
-          </div>
-
-          <div class="services__item">
-            <div class="icon__box">
-              <img
-                src="./assets/img/seo.png"
-                alt=""
-                class="services__icon"
-              />
-              <div class="services__dot">
-                <span class="dot"></span>
-              </div>
-            </div>
-
-            <h3 class="services__title text-lg">
-              OTIMIZAÇÃO DE SEO
-            </h3>
-            <p class="services__details">
-              Otimizações para tornar o seu site melhor posicionado nos buscadores de pesquisa.
-            </p>
-          </div>
-
-        </div>
-      </section> -->
 
       <!--=============== Resume ===============-->
       <section class="section container" id="resume">
@@ -562,7 +495,7 @@
                   <input
                     type="text"
                     name="name"
-                    placeholder="Seu nome"
+                    placeholder="Name"
                     class="contact__input"
                     id="contact-name"  
                   />
@@ -572,7 +505,7 @@
                   <input
                     type="email"
                     name="email"
-                    placeholder="Seu e-mail"
+                    placeholder="E-mail"
                     class="contact__input"
                     id="contact-email"  
                   />
@@ -581,7 +514,7 @@
                 <div class="contact__input-div">
                   <textarea
                     name="message"
-                    placeholder="Digite a mensagem aqui"
+                    placeholder="Message"
                     class="contact__input textarea"
                     id="message"
                     cols="30"
@@ -596,7 +529,7 @@
                   class="button contact__button"
                   id="send"
                 >
-                  Enviar
+                  Send
                 </button>
 
               </form>
